# ucotron

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml  release.yml  sync-pro.yml
dashboard/: .env.example  AGENTS.md  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
dashboard/messages/: en.json  es.json
dashboard/public/: ucotron-tokens.css
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/components/: auth-provider.tsx  card.tsx  force-graph.tsx  header.tsx  locale-provider.tsx  namespace-context.tsx  shell.tsx  sidebar.tsx  theme-provider.tsx  use-translation.tsx
dashboard/src/i18n/: middleware.ts
dashboard/src/lib/: api.ts  auth-client.ts  auth-session.ts  auth.ts  email.ts
deploy/helm/ucotron/: Chart.yaml  README.md  values-production.yaml  values.yaml
ralph/projects/oss-qa/: prd.json  progress.txt
repos/ucotron.nosync/server/: AGENTS.md
server/: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHAT_SCENARIOS.md  CLOUD_BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  DECISION.md  DUP_SORT_EVALUATION.md  Dockerfile  ERGONOMIA.md  FINE_TUNING.md  MULTIMODAL.md  PERFORMANCE_TUNING.md  PIPELINES.md  RESULTS.md  SKILLS.md  TEST_RESULTS.md  docker-compose.multi.yml  docker-compose.observability.yml  docker-compose.yml  package-lock.json  package.json  prometheus.yml  setup.sh  tempo.yml  ucotron-multihop-llm.toml  ucotron-multihop-sidecar.toml  ucotron-sidecar.toml  ucotron.toml
server/bench_runner/: Cargo.toml
server/bench_runner/src/: main.rs
server/core/: Cargo.toml
server/core/src/: agent.rs  arena_traversal.rs  backends.rs  bench_eval.rs  community.rs  contradictions.rs  data_gen.rs  entity_resolution.rs  event_nodes.rs  hybrid.rs  jsonld_export.rs  lib.rs  locomo.rs  longmemeval.rs  mem0_adapter.rs  multimodal.rs  query.rs  types.rs  zep_adapter.rs
server/core/src/retrieval/: mindset_scorer.rs  mod.rs
server/core/src/reward/: centrality.rs  mod.rs  path_finder.rs  path_reward.rs
server/docs/adr/: ADR-001-incremental-hnsw-insert.md
server/docs/decisions/: ADR-001-helixdb-over-cozodb.md  ADR-002-dual-index-multimodal.md  ADR-003-fireworks-fine-tuning.md  ADR-004-hnsw-rebuild-on-upsert.md  ADR-005-lazygraphrag-philosophy.md
server/docs/runbooks/: 01-server-start-stop.md  02-lmdb-backup-restore.md  03-model-update.md  04-connector-sync.md  05-monitoring-alerts.md  06-disaster-recovery.md  07-consolidation-worker.md  08-rbac-and-auth.md  09-audit-logging.md  10-docker-operations.md
server/helix_impl/: Cargo.toml
server/helix_impl/benches/: hnsw_rebuild.rs
server/helix_impl/src/: lib.rs
server/scripts/: cloud_benchmark.sh  cross_language_tests.sh  download_benchmarks.sh  download_models.sh  download_multimodal_models.sh  export_to_onnx.py  finetune_pipeline.sh  finetune_relations.py  generate_checksums.sh  migrate_from_mem0.sh  migrate_from_zep.sh  model_checksums.sha256  multimodal_checksums.sha256  run_chat_scenarios.mjs  sync_versions.sh  train_projection_layer.py  verify_models.sh
server/scripts/config/: __init__.py  fireworks_config.yaml  test_fireworks_config.py
server/scripts/fine_tune/: __init__.py  test_train_projection_mlp.py  test_train_slm.py  train_projection_mlp.py  train_slm.py
server/scripts/generate_training_data/: __init__.py  contradiction_generator.py  entity_resolution_generator.py  llm_dataset_generator.py  path_reward_generator.py  preference_generator.py  projection_dataset_generator.py  re_dataset_generator.py  test_contradiction_generator.py  test_entity_resolution_generator.py  test_llm_dataset_generator.py  test_path_reward_generator.py  test_preference_generator.py  test_projection_dataset_generator.py  test_re_dataset_generator.py
server/sidecar/: main.py  requirements.txt
server/test-results/oss-launch-v2/: BENCHMARK-COMPARISON.md  LAUNCH-REPORT.md  MULTIHOP-COMPARISON.md  benchmark-qwen-2b-pair.json  benchmark-qwen-2b-pair.py  benchmark-qwen3-4b-llm.json  benchmark-qwen3-4b-llm.py  dashboard-crud-qa-report.md  dashboard-qa-report.md  llm-inference-verification.json  multihop-no-llm.json  multihop-no-llm.py  multihop-qwen-2b.json  multihop-qwen-2b.py  multihop-qwen-8b.json  multihop-qwen3-4b.json  multihop-qwen3-4b.py  multihop-test-data.json  qwen-8b-feasibility.md  qwen-vl-integration-research.md
server/test-results/oss-qa/: BUGS.md  auth-results.json  benchmark-default-model.json  benchmark-no-llm.json  benchmark-no-llm.py  crud-results.json  graph-results.json  health-check-results.json  import-export-results.json  mcp-results.json  qa003_search_test.py  qa005_graph_test.py  qa006_agent_test.py  qa012_video_test.py  search-results.json
server/ucotron_config/: Cargo.toml
server/ucotron_config/src/: lib.rs
server/ucotron_connectors/: Cargo.toml
server/ucotron_connectors/src/: bitbucket.rs  connector.rs  discord.rs  filters.rs  github.rs  gitlab.rs  google_docs.rs  google_drive.rs  lib.rs  mongodb.rs  notion.rs  obsidian.rs  postgres.rs  scheduler.rs  slack.rs  spotify.rs  telegram.rs  youtube.rs
server/ucotron_extraction/: Cargo.toml
server/ucotron_extraction/src/: audio.rs  consolidation.rs  cross_modal.rs  cross_modal_search.rs  embeddings.rs  fine_tuning.rs  image.rs  ingestion.rs  lib.rs  ner.rs  ocr.rs  relations.rs  reranker.rs  retrieval.rs  video.rs
server/ucotron_extraction/tests/: chunker_numbers.rs
server/ucotron_sdk/: Cargo.toml
server/ucotron_sdk/src/: lib.rs
server/ucotron_sdk/tests/: cross_language.rs
server/ucotron_server/: Cargo.toml
server/ucotron_server/src/: audit.rs  auth.rs  error.rs  lib.rs  main.rs  mcp.rs  mcp_main.rs  metrics.rs  openapi.rs  state.rs  types.rs  writer_lock.rs
server/ucotron_server/src/handlers/: mod.rs
server/ucotron_server/src/llm/: client.rs  costs.rs  mod.rs  registry.rs  router.rs
server/ucotron_server/src/telemetry/: http_layer.rs  metrics_bridge.rs  mod.rs  trace_id_layer.rs  tracer.rs
server/ucotron_server/tests/: api_tests.rs  namespace_isolation.rs
(+60 files in other folders)
