[package]
name = "ucotron-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core traits, types, and data generation for Ucotron cognitive memory framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
graphrs = { workspace = true }
bumpalo = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"
