[package]
name = "ucotron-connectors"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Private connectors crate for Ucotron — data source integrations (Slack, GitHub, Notion, etc.)"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
mongodb = { workspace = true }
cron = { workspace = true }
tracing = "0.1"
chrono = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
